--- a/VRChat/78/1073778.html
+++ b/VRChat/78/1073778.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "vcffyGA23SOSIg0BFSsyAGHNYcs8C9K2a5lnfGI0Frk="></script>
+    "/5F7zmBzMUj8UL4OHwePN16grGGMsGFafwoO0CAjQvg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"かぼちゃのランタン【VRChat用】","description":"ハロウィンの準備なーんもしてない！という人向け、普段のアバターに持たせるだけでなんとなくハロゥイーンになるカボチャのランタン配布です。unitypackage形式です。\n5742△ポリゴンなので結構エグいですが、実際の工作工程を想定して現実にあり得る構造を意識したのがコダワリポイントです。\nダイナミックボーンに対応しているので、ダイナミックボーンインポート済みのプロジェクトにインポートするとそのまま動きます。（竿とろうそくの炎）\nアバターの手に持たせたい場合は、オブジェクト全体をアバターのルート以下に移動させたあと、「panpkinアーマチュア」というアーマチュアのオブジェクトをHand等キャラクターの任意のアーマチュアへD\u0026Dして子にしてやってください。（メッシュなどは移動する必要ありません）\n\n著作権は放棄しませんが、使用用途、再配布等一切制限しません。このモデルデータを利用して発生した不利益などは当方一切保証しません。\n\n竿は鋼鉄製、カボチャの中にはろうそくの燭台が入っています。\n竿で1キロ、カボチャ部分で2キロ近くあるので結構重い（という設定）です。腕力に自信のあるアバター向けです。","url":"https://booth.pm/ja/items/1073778","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/35ad0fa7-eb31-41fa-b842-fcdd7687593f/i/1073778/004540b3-6895-47f8-88cf-8fd6a90c196d_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="vcffyGA23SOSIg0BFSsyAGHNYcs8C9K2a5lnfGI0Frk="></script>
+    nonce="/5F7zmBzMUj8UL4OHwePN16grGGMsGFafwoO0CAjQvg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -175,7 +177,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1073778/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               33
@@ -190,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1073778/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               33
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
