--- a/VRChat/33/1072633.html
+++ b/VRChat/33/1072633.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "bxpnsUa10wKo5Ux8ZD58ZQQpIRZaXHq+FcGxu7mdVwE="></script>
+    "8Jrve/Lbge/sWOo3CvCEMfrdpzf5XQHDNaQ6YZWXv+Q="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat利用想定 寄生虫","description":"バイオハザードとか寄生獣とかそんな感じのやつです。バイオハザード4のプラーガを強く参考にしたのでそんな感じになっています。まんまるシェーダー1.3とDynamic Boneを設定していますので、インポートしておいた方がいいと思います。ハロウィンのためだけに作ったのでもったいないから配布します。\nキモがられても自己責任でお願いします。","url":"https://booth.pm/ja/items/1072633","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/cdb02673-8664-4200-9407-c3c4df48aa2c/i/1072633/1960c820-59e7-42ef-b3ce-243a43ea8019_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="bxpnsUa10wKo5Ux8ZD58ZQQpIRZaXHq+FcGxu7mdVwE="></script>
+    nonce="8Jrve/Lbge/sWOo3CvCEMfrdpzf5XQHDNaQ6YZWXv+Q="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1072633/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               21
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1072633/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               21
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
