--- a/VRChat/27/1072127.html
+++ b/VRChat/27/1072127.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "3ATmNZ545n5sEmejev6VOiiWgKySN05Deo5Arwz9vMk="></script>
+    "Xy6MD8Z3G6oCRRVBPWXc6RRieM/L7eC/NEzajwPT4E8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"（３Dモデル）ハロウィン・ケーキ","description":"ハロウィン風のケーキです。(▲7,032)\n\nvtuberのハロウィン動画や、\nVRChatその他での賑やかしにご利用ください。\n\n【内容物説明】\nHalloween.fbx : ハロウィン・ケーキのfbxです。\nHalloweenTex.png : テクスチャです。\nReadme.txt : 説明書です。\n\n※ アラザンだけ別オブジェクトです。光沢のあるマテリアルを適用してあげてください。\n\n【ご利用について】\n改変：可\n商用利用：可\n作者詐称：不可\n再配布、本データを含めた販売：不可\nVRChatなどで使用するアバターやペデスタル、ワールドへの同梱：可\n\n【免責事項】\nモデル製作者は当モデルデータを利用したことにより発生した損害、損失、その他の不利益に対して一切の責任を負いません。\n\n※ 見本画像でユニティちゃんトゥーンシェーダーを使用しております（１枚目）。\n\n↓使用例↓","url":"https://booth.pm/ja/items/1072127","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/18b0699d-c344-4832-a9f1-66695f5c053b/i/1072127/3e1622b7-5c02-4ddf-89bc-258d6e967601_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="3ATmNZ545n5sEmejev6VOiiWgKySN05Deo5Arwz9vMk="></script>
+    nonce="Xy6MD8Z3G6oCRRVBPWXc6RRieM/L7eC/NEzajwPT4E8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1072127/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               414
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1072127/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               414
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
