--- a/VRChat/89/1070889.html
+++ b/VRChat/89/1070889.html
@@ -70,9 +70,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "zPlOS3GTZimZ6eugM3v2X0BKax0kSuXekS53FDQgcNk="></script>
+    "y9YkRQcuFQMznPbmAbaU7v8roHGHSYxaJC7mVuv5uJA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"浣腸器","description":"医療器具フリー素材3Dモデル\n△488\n","url":"https://booth.pm/ja/items/1070889","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/895a216f-4b58-4d03-b933-8ac2468d7aa2/i/1070889/a442c5ad-0d97-4ef7-9ab4-08613950736f_base_resized.jpg"}
     </script>
@@ -86,7 +86,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="zPlOS3GTZimZ6eugM3v2X0BKax0kSuXekS53FDQgcNk="></script>
+    nonce="y9YkRQcuFQMznPbmAbaU7v8roHGHSYxaJC7mVuv5uJA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -110,6 +110,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -148,7 +150,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1070889/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               244
@@ -163,14 +165,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1070889/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               244
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
