--- a/VRChat/39/1070139.html
+++ b/VRChat/39/1070139.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "gcKFsPp8Dhbz2rMsAEMrcV/DhnF5JMlJV+1b2kTdM3I="></script>
+    "asdxp5CktWuYfy4HLxhaUVs3w6fRZQzCwKH0mUJkJE8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ボクシンググローブ　[FBXデータファイル 3DCG オブジェクト]","description":"【品名】 [ボクシンググローブ]FBXデータファイル3DCGオブジェクト\n[Boxing glove]fbx datafile 3DCG object\nフリー素材\n\nBG_L.fbx\nBG_R.fbx\ntexture.png\n\n◆利用想定　VRchat Vtuber\n◆ポリゴン数　△640(各320)ポリゴン\n\n【Version】1.00\n【最終更新日】2018.10.27\n【Copyright】©2018つくｘ２工房.Maiky\n\n※画像の女の子のモデルは付属しておりません。\n※アバターに装着する場合、手首や指を動かすと突き抜けが発生する場合があります。\n装着時はアバターの手首を固定する、又は手首を動かさない等の工夫が必要です。","url":"https://booth.pm/ja/items/1070139","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"180"},"image":"https://booth.pximg.net/c/620x620/50c466f8-ea25-4d84-97fb-a601d0055de7/i/1070139/c652a861-b66e-4c1b-82ec-301a088dc649_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="gcKFsPp8Dhbz2rMsAEMrcV/DhnF5JMlJV+1b2kTdM3I="></script>
+    nonce="asdxp5CktWuYfy4HLxhaUVs3w6fRZQzCwKH0mUJkJE8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -122,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -136,7 +135,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -178,7 +178,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1070139/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               124
@@ -193,14 +193,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1070139/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               124
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
